Fix SonarCloud maintainability issues